--- a/vite-project/styles/style.css
+++ b/vite-project/styles/style.css
@@ -23,18 +23,18 @@ body,
   --h4: 2.25rem;
   --h5: 1.5rem;
 }
-.warm {
+.darkmode {
   --primary: var(--white);
   --secondary: var(--black);
 }
-.cool {
+.lightmode {
   --primary: var(--black);
   --secondary: var(--white);
 }
 .hero {
   background-color: var(--primary);
 }
-.main {
+.main { 
   background-color: var(--secondary);
   height: 90vh;
 }
@@ -44,6 +44,7 @@ h1 {
 }
 h2 {
   font-size: var(--h2);
+  
 }
 
 h3 {
@@ -64,20 +65,4 @@ h4,
 h5 {
   text-align: center;
 }
-.btn,
-.btn:link,
-.btn:visited {
-  text-transform: uppercase;
-  text-decoration: none;
-  padding: 1.5rem 4rem;
-  display: inline-block;
-  margin: 1rem auto;
-  font-size: 2rem;
-  border: none;
-  border-radius: 10rem;
-  transition: all 0.2s;
-}
-.btn:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 10px 0.5rem rgba(0, 0, 0, 0.2);
-}
+
