--- a/vite-project/styles/variables.css
+++ b/vite-project/styles/variables.css
@@ -12,7 +12,7 @@
     position: relative;
   }
   
-  .outer {
+  .container-box {
     flex-wrap: wrap;
     justify-content: center;
     display: flex;
@@ -20,7 +20,7 @@
   }
   
   .inner {
-    background-color: white;
+    background-color: var(--secondary);
     border: 8px solid black;
     border-radius: 10%;
     width: 43rem;
