--- a/vite-project/styles/style.css
+++ b/vite-project/styles/style.css
@@ -6,15 +6,13 @@ body,
   padding: 0;
   box-sizing: border-box;
   font-size: 62.5%;
+  background-color: var(--secondary);
 }
 :root {
   --black: #000;
 --white: 	#FFFFFF
   --gray: #252c30;
 
-  /*Intentions */
-  --primary: var(--light-blue);
-  --secondary: var(--dark-blue);
 
   /*Typography */
   --h1: 7.594rem;
@@ -29,7 +27,8 @@ body,
 }
 .lightmode {
   --primary: var(--black);  
-  --secondary: var(--white) ;
+  --secondary: var(--white);
+
 }
 .hero {
   background-color: var(--secondary);
