--- a/vite-project/styles/variables.css
+++ b/vite-project/styles/variables.css
@@ -1,16 +1,3 @@
-
-.starter {
-    font-size: 600%;
-    padding: 40px;
-    background-color: white;
-    align-content: center;
-    border: 6px solid black;
-    width: 50%;
-    height: auto;
-    border-radius: 40%;
-    margin: 30px auto;
-    position: relative;
-  }
   
   .container-box {
     flex-wrap: wrap;
@@ -21,7 +8,7 @@
   
   .inner {
     background-color: var(--secondary);
-    border: 8px solid black;
+    border: 8px solid;
     border-radius: 10%;
     width: 43rem;
     height: 50rem;
@@ -42,13 +29,11 @@
 .btn,
 .btn:link,
 .btn:visited {
-  text-transform: uppercase;
-  text-decoration: none;
   padding: 1.5rem 4rem;
   display: inline-block;
   margin: 1rem auto;
   font-size: 2rem;
-  border: none;
+  background-color: lightcoral;
   border-radius: 10rem;
   transition: all 0.2s;
 }
