--- a/vite-project/styles/style.css
+++ b/vite-project/styles/style.css
@@ -13,12 +13,6 @@ body,
 --white: 	#FFFFFF
 
 
-  /*Typography */
-  --h1: 7.594rem;
-  --h2: 5.063rem;
-  --h3: 3.375rem;
-  --h4: 2.25rem;
-  --h5: 1.5rem;
 }
 .darkmode {
   --primary: var(--white);
@@ -38,31 +32,10 @@ body,
 }
 
 h1 {
-  font-size: var(--h1);
-}
-h2 {
-  font-size: var(--h2);
-  
-}
-
-h3 {
-  font-size: var(--h3);
-}
-
-h4 {
-  font-size: var(--h4);
-}
-
-h5 {
-  font-size: var(--h5);
-}
-h1,
-h2,
-h3,
-h4,
-h5 {
+  font-size: 7.594rem;
   text-align: center;
 }
+
 
 p{
   justify-content: center;
